styles/style.css
.task {
    grid-area:task;
    background-color:beige;
    color : black;
    padding: 5px;

}
.resolution{
    grid-area: resolution;
    font-style : italic;
}
.draggable {
    grid-area: grab-box;
    cursor: move;
    background-color: #cc6600;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.complete {
    grid-area: complete;
    cursor: pointer;
    background-color: #00cc66;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.status {
    grid-area: status;
    position: relative;
    display: inline-block;
}
.status-options {
    display: none;
    position: absolute;
    min-width: 100px;
    background-color: #f2f2f2;
    z-index: 1;
}
.status-options button {
    color: black;
    padding: 12px 16px;
    width: 100%;
    text-decoration: none;
    display: inline-block;
}
.status-options button:hover {
    background-color: #cccccc;
}
.status:hover .status-options {
    display: block;
}
.status-high {
    background-color:#ff8080;
}
.status-normal {
    background-color:#66ff99;
}
.status-hold {
    background-color:#99ccff;
}
.new_task {
    margin: 5px;
}
.editing {
    border: 2px solid black;
    padding: 2px 4px 2px 1px;
}
.header {
    display: inline-block;
    margin-right: 10px;
    margin-bottom: 4px;
}
.filler {
    height: 100%;
}
.placeholder {
    background-color: #edf2f7;
    border: 2px dashed #cbd5e0;
    margin-bottom: 1rem;
}
.grid-container {
    display: grid;
    column-gap: 1px;
    row-gap: 2px;
    border: 1px solid black;
    grid-template-columns: 30px 50px auto 100px;
    grid-template-areas:
        'status grab-box task complete'
        'status grab-box resolution complete';
    border-top: 2px solid black;
    border-bottom: 2px solid black;
    border-left: 2px solid black;
    margin-bottom: 5px;
    background-color: black;
}
body {
    background-color: snow;
}

